iptables-pc

*filter

-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

# Permette tutto il traffico su loopback (lo0) traffic e elimina tutto il traffico che non usa lo0 verso 127/8
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Permette e regola ICMP ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# scanport
-A INPUT -m recent --name portscan --rcheck --seconds 86400 -j DROP
-A FORWARD -m recent --name portscan --rcheck --seconds 86400 -j DROP

# Accetta in entrata su tutte le connessioni stabilite
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# torrent
-A INPUT -p tcp --dport 32980 -j ACCEPT

# regole di sicurezza
-A INPUT -p ip -f -j DROP
-A INPUT -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP

COMMIT
