iptables-vps

# configurazione iptables per vps
*filter

-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

# Permette tutto il traffico su loopback (lo0) traffic e elimina tutto il traffico che non usa lo0 verso 127/8
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Permette e regola ICMP ping
-A INPUT -p icmp --icmp-type echo-reply -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -m limit --limit 5/s -m state --state NEW -j ACCEPT
-A INPUT -p icmp --icmp-type destination-unreachable -m state --state NEW -j ACCEPT
-A INPUT -p icmp --icmp-type time-exceeded -m state --state NEW -j ACCEPT
-A INPUT -p icmp --icmp-type timestamp-request -m state --state NEW -j ACCEPT
-A INPUT -p icmp --icmp-type timestamp-reply -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# protezione spoofing
-A INPUT -s 10.0.0.0/8 -j DROP 
-A INPUT -s 169.254.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 192.168.0.0/24 -j DROP
-A INPUT -s 192.168.1.0/24 -j DROP
-A INPUT -s 192.168.10.0/24 -j DROP
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -s 240.0.0.0/5 -j DROP
-A INPUT -d 240.0.0.0/5 -j DROP
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -d 0.0.0.0/8 -j DROP
-A INPUT -d 239.255.255.0/24 -j DROP
-A INPUT -d 255.255.255.255 -j DROP

# pacchetti non validi
-A INPUT -m state --state INVALID -j DROP
-A FORWARD -m state --state INVALID -j DROP
-A OUTPUT -m state --state INVALID -j DROP

# scanport
-A INPUT -m recent --name portscan --rcheck --seconds 86400 -j DROP
-A FORWARD -m recent --name portscan --rcheck --seconds 86400 -j DROP

# dos
-N syn-flood
-A INPUT -i $IFACE -p tcp --syn -j syn-flood
-A syn-flood -m limit --limit 1/s --limit-burst 4 -j RETURN
-A syn-flood -j DROP
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP

# Accetta in entrata su tutte le connessioni stabilite
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Permette connessioni HTTP e HTTPS da qualsiasi parte provengano (le normali porte per i siti web)
#-A INPUT -p tcp --dport 80 -j ACCEPT
#-A INPUT -p tcp --dport 443 -j ACCEPT

# Permette le connessioni SSH
# Il numero --dport e' lo stesso di quello in /etc/ssh/sshd_config
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Ora ci si dovrebbe informare sulle regole di iptables e considerare se l'accesso ssh
# per tutti sia realmente quello che si vuole. Molto probabilmente si preferisce 
# permettere l'accesso solo per alcuni IP.

# znc
#-A INPUT -p tcp --dport 44531 -j ACCEPT
#-A INPUT -p tcp --dport 23556 -j ACCEPT

# bot
#-A INPUT -p tcp --dport 3397 -j ACCEPT
#-A INPUT -p tcp --dport 3697 -j ACCEPT
#-A INPUT -p tcp --dport 3997 -j ACCEPT

# esempio
#-A INPUT -p [PROTOCOLLO] --dport [PORTA] -s 151.33.0.0/16 -j ACCEPT

# registrare le chiamate negate di iptables (accesso via il comando 'dmesg')
#-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# regole di sicurezza
-A INPUT -p ip -f -j DROP
-A INPUT -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP


COMMIT
