iptables-vps-nat
# Configurazione iptables per vps nat
*filter

-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

# Permette tutto il traffico su loopback (lo0) traffic e elimina tutto il traffico che non usa lo0 verso 127/8
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Permette e regola ICMP ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# pacchetti non validi
-A INPUT -m state --state INVALID -j DROP
-A FORWARD -m state --state INVALID -j DROP
-A OUTPUT -m state --state INVALID -j DROP

# Accetta in entrata su tutte le connessioni stabilite
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Permette le connessioni SSH
# Il numero --dport e' lo stesso di quello in /etc/ssh/sshd_config
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# znc
#-A INPUT -p tcp --dport 44531 -j ACCEPT
#-A INPUT -p tcp --dport 23556 -j ACCEPT

# bot
#-A INPUT -p tcp --dport 3397 -j ACCEPT
#-A INPUT -p tcp --dport 3697 -j ACCEPT
#-A INPUT -p tcp --dport 3997 -j ACCEPT

# regole di sicurezza
-A INPUT -p ip -f -j DROP
-A INPUT -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP

COMMIT
